Fixed bugs in home & about pages on mobile version

--- a/css/main.css
+++ b/css/main.css
@@ -133,10 +133,10 @@ header .container {
   justify-content: center;
   flex-direction: column;
   position: absolute;
-  top: 26%;
+  top: 16%;
   left: 0;
   width: 100%;
-  height: 85%;
+  height: 49%;
   background-color: var(--base-color);
   text-align: center;
   text-transform: capitalize;
@@ -169,7 +169,7 @@ header .container {
   background-image: url(../images/mobile_intro_bg.png);
   background-size: cover;
   background-position: center;
-  min-height: 110vh;
+  min-height: 70vh;
   position: relative;
   padding-bottom: 2em;
 }
@@ -348,7 +348,7 @@ p {
   background-image: url(../images/about_bg_01.png);
   background-position: left top;
   background-repeat: no-repeat;
-  min-height: 110vh;
+  min-height: 66vh;
   position: relative;
 }
 
